# ALIE-env-hackathon

./: .env.example  .gitignore  Dockerfile  README.md  app.py  environment.py  grader.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  validate.py
configs/: tasks.py
env/: alie_env.py  models.py  student_sim.py
server/: app.py  dashboard.html
